--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a onclick="filtersubject('ITA')">Italian</a>
             <a onclick="filtersubject('ARA')">Arabic</a>
             <a onclick="filtersubject('LAT')">Latin</a>
-            <a onclick="filtersubject('GRE')">Classical Greek</a>
+            <a onclick="filtersubject('GRK')">Classical Greek</a>
           </div>
         </div>
   
