--- a/newpost.html
+++ b/newpost.html
@@ -95,8 +95,8 @@
                   <br>
                 </th>
                 <th>
-                  <label class="labelsf" for="teachercomments">Tell me about your Teacher. What dorm are they in? <br> Did they use reserve? What is their teaching style?<br></label>             
-                  <textarea rows="3" cols="50" id = "comments" name = "teachercomments" required></textarea>
+                  <label class="labelsf" for="teacherComments">Tell me about your Teacher. What dorm are they in? <br> Did they use reserve? What is their teaching style?<br></label>             
+                  <textarea rows="3" cols="50" id = "comments" name = "teacherComments" required></textarea>
                 </th>
               </table>
               <br>
@@ -104,8 +104,8 @@
               <table>
                 <th>
                   <br>
-                  <label class="labelsf" for="comments">Comments and Review (How did you enjoy the course? Would you recomend it to others?)</label>
-                  <br><textarea rows="10" cols="80" id = "comments" name ="coursecomments" required></textarea></br>
+                  <label class="labelsf" for="courseComments">Comments and Review (How did you enjoy the course? Would you recomend it to others?)</label>
+                  <br><textarea rows="10" cols="80" id = "comments" name ="courseComments" required></textarea></br>
                   <br>
                 </th>
                 <th>
