--- a/course.html
+++ b/course.html
@@ -21,15 +21,16 @@
   </div>
   
 
-  <!-- NEEDS BETTER FORMATTING -->
-  <div id="courseNameTitle"></div>
-  <div id="courseRating"></div>
-  <div id="courseDescription"></div>
+  <!-- Adding all the course info to the top of course.html-->
+  <div class = courseNameTitle id="courseNameTitle"></div>
+  <div class = courseRating id="courseRating"></div>
+  <div class = courseDescription id="courseDescription"></div>
   
 
-  <!-- Course Reviews -->
+  <!-- Adding Course Reviews -->
   <div id="allreviews"></div>
 
+  <!-- Importing JSON files -->
   <script src="addcoursereviews.js"></script>
   <script src="addcourseinfo.js"></script>
 </html>
