--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a onclick="filtersubject('FRE')">French</a>
             <a onclick="filtersubject('CHI')">Chinese</a>
             <a onclick="filtersubject('GER')">German</a>
-            <a onclick="filtersubject('JAP')">Japanese</a>
+            <a onclick="filtersubject('JPN')">Japanese</a>
             <a onclick="filtersubject('RUS')">Russian</a>
             <a onclick="filtersubject('ITA')">Italian</a>
             <a onclick="filtersubject('ARA')">Arabic</a>
